specs/fragments/arrays/assignment-preserves-others.test
// Test: assignment-preserves-others
function main() returns int
    var arr = [10, 20, 30]
    arr.set(0, value: 100)
    return try arr.get(1) otherwise 0
end 'main'
---
ExitCode: 20
---
func.func @main() -> i64 {
  ^entry:
    x86.prologue stack_size=160 saved_gprs=[RBX,R12,R13,R14]
    x86.mov rbx, 10
    x86.mov r12, 3
    x86.mov r13, 8
    x86.mov rax, 24
    x86.mov r11, rax
    x86.call extern kernel32.dll::GetProcessHeap
    x86.mov rcx, rax
    x86.mov rdx, 8
    x86.mov r8, r11
    x86.call extern kernel32.dll::HeapAlloc
    x86.mov rcx, 32
    x86.lea rdx, qword ptr [rbp-64]
    x86.mov r14, 0
    x86.lea r8, qword ptr [rdx]
    x86.mov qword ptr [r8], rax
    x86.lea rax, qword ptr [rdx+8]
    x86.mov qword ptr [rax], r14
    x86.lea r9, qword ptr [rdx+16]
    x86.mov qword ptr [r9], r12
    x86.mov r9, 0
    x86.lea r10, qword ptr [rdx+24]
    x86.mov dword ptr [r10], r9
    x86.lea r10, qword ptr [rdx+28]
    x86.mov dword ptr [r10], r9
    x86.mov r10, qword ptr [r8]
    x86.lea r9, qword ptr [r10+r14]
    x86.mov qword ptr [r9], rbx
    x86.mov r9, 20
    x86.mov rbx, 1
    x86.mov r10, qword ptr [r8]
    x86.lea r11, qword ptr [r10+r13]
    x86.mov qword ptr [r11], r9
    x86.mov r11, 30
    x86.mov r9, qword ptr [r8]
    x86.mov r8, 16
    x86.lea r10, qword ptr [r9+r8]
    x86.mov qword ptr [r10], r11
    x86.mov qword ptr [rax], r12
    x86.lea rax, qword ptr [rbp-104]
    x86.lea r11, qword ptr [rax]
    x86.mov qword ptr [r11], r14
    x86.lea r11, qword ptr [rax+8]
    x86.push rsi
    x86.push rdi
    x86.mov rdi, r11
    x86.mov rsi, rdx
    x86.cld
    x86.rep_movsb
    x86.pop rdi
    x86.pop rsi
    x86.lea r12, qword ptr [rbp-144]
    x86.mov rcx, 40
    x86.push rsi
    x86.push rdi
    x86.mov rdi, r12
    x86.mov rsi, rax
    x86.cld
    x86.rep_movsb
    x86.pop rdi
    x86.pop rsi
    x86.mov rcx, 100
    x86.mov r10, r12
    x86.mov r11, r14
    x86.push rcx
    x86.pop r8
    x86.mov rdx, r11
    x86.mov rcx, r10
    x86.call Array$int.set
    x86.lea r13, qword ptr [rbp-160]
    x86.mov r10, r13
    x86.mov r11, r12
    x86.push rbx
    x86.pop r8
    x86.mov rdx, r11
    x86.mov rcx, r10
    x86.call Array$int.get
    x86.lea rcx, qword ptr [r13]
    x86.movzx rax, byte ptr [rcx]
    x86.mov rcx, rax
    x86.cmp rcx, r14
    x86.setne rcx
    x86.test rcx, rcx
    x86.jne try.error
    x86.jmp try.success
  ^try.success:
    x86.lea rcx, qword ptr [r13+8]
    x86.mov rax, qword ptr [rcx]
    x86.mov r13, rax
    x86.jmp try.merge
  ^try.error:
    x86.mov r13, 0
    x86.jmp try.merge
  ^try.merge(%125: i64):
    x86.lea rax, qword ptr [r12+8]
    x86.lea rcx, qword ptr [rax]
    x86.mov rax, qword ptr [rcx]
    x86.mov r11, rax
    x86.call extern kernel32.dll::GetProcessHeap
    x86.mov rcx, rax
    x86.mov rdx, 0
    x86.mov r8, r11
    x86.call extern kernel32.dll::HeapFree
    x86.mov rax, r13
    x86.epilogue saved_gprs=[RBX,R12,R13,R14]
    x86.ret
}

func.func @Array$int.set(%self: memref<!maxon.struct<Array$int>>, %index: i64, %value: i64) {
  ^entry(%self: memref<!maxon.struct<Array$int>>, %index: i64, %value: i64):
    x86.prologue stack_size=48
    x86.mov r10, rcx
    x86.mov r11, rdx
    x86.mov rcx, r8
    x86.mov r8, r10
    x86.mov r9, r11
    x86.lea rax, qword ptr [r8+8]
    x86.lea rdx, qword ptr [rax+8]
    x86.mov rax, qword ptr [rdx]
    x86.lea rdx, qword ptr [rbp-40]
    x86.mov qword ptr [rdx], rax
    x86.mov rax, 0
    x86.cmp r9, rax
    x86.setge rax
    x86.test rax, rax
    x86.jne then
    x86.jmp merge
  ^then:
    x86.mov rax, qword ptr [rdx]
    x86.cmp r9, rax
    x86.setl rax
    x86.test rax, rax
    x86.jne then_1
    x86.jmp merge
  ^merge:
    x86.epilogue
    x86.ret
  ^then_1:
    x86.lea rax, qword ptr [r8+8]
    x86.lea rdx, qword ptr [rax]
    x86.mov rax, qword ptr [rdx]
    x86.mov rdx, 3
    x86.mov r10, r9
    x86.push rcx
    x86.shl r10, rdx
    x86.pop rcx
    x86.lea rdx, qword ptr [rax+r10]
    x86.mov qword ptr [rdx], rcx
    x86.jmp merge
}

func.func @Array$int.get(%__error_union_ret: ptr<!maxon.error_union<i64, ArrayError>>, %self: memref<!maxon.struct<Array$int>>, %index: i64) {
  ^entry(%__error_union_ret: ptr<!maxon.error_union<i64, ArrayError>>, %self: memref<!maxon.struct<Array$int>>, %index: i64):
    x86.prologue stack_size=32
    x86.mov r10, rcx
    x86.mov r11, rdx
    x86.mov rax, r8
    x86.mov rcx, r10
    x86.mov rdx, r11
    x86.lea r8, qword ptr [rdx+8]
    x86.lea r9, qword ptr [r8+8]
    x86.mov r8, qword ptr [r9]
    x86.mov r9, 0
    x86.cmp rax, r9
    x86.setl r9
    x86.test r9, r9
    x86.jne then
    x86.jmp merge
  ^then:
    x86.mov r9, 0
    x86.mov r10, 1
    x86.mov byte ptr [rcx], r10
    x86.mov r10, 8
    x86.lea r11, qword ptr [rcx+r10]
    x86.mov byte ptr [r11], r9
    x86.epilogue
    x86.ret
  ^merge:
    x86.cmp rax, r8
    x86.setge r8
    x86.test r8, r8
    x86.jne then_1
    x86.jmp merge_1
  ^then_1:
    x86.mov r8, 0
    x86.mov r11, 1
    x86.mov byte ptr [rcx], r11
    x86.mov r11, 8
    x86.lea r9, qword ptr [rcx+r11]
    x86.mov byte ptr [r9], r8
    x86.epilogue
    x86.ret
  ^merge_1:
    x86.mov r9, 0
    x86.mov byte ptr [rcx], r9
    x86.lea r9, qword ptr [rdx+8]
    x86.lea rdx, qword ptr [r9]
    x86.mov r9, qword ptr [rdx]
    x86.mov rdx, 3
    x86.mov r8, rax
    x86.push rcx
    x86.shl r8, rdx
    x86.pop rcx
    x86.lea rdx, qword ptr [r9+r8]
    x86.mov r9, qword ptr [rdx]
    x86.mov rdx, 8
    x86.lea r8, qword ptr [rcx+rdx]
    x86.mov qword ptr [r8], r9
    x86.epilogue
    x86.ret
}
---
